github-workflows: keep build going

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,4 @@ jobs:
         name: mic92
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         file: non-broken.nix
+        nixBuildArgs: "-k"
