--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v8
     - run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
-    - uses: cachix/cachix-action@v5
+    - uses: cachix/cachix-action@v6
       with:
         name: mic92
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-        file: non-broken.nix
-        nixBuildArgs: "-k"
+    - run: nix-build -k non-broken.nix
