--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,6 @@ jobs:
       with:
         name: mic92
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: nix-build -k non-broken.nix
+    - run: |
+        nix-build -A nix-build-uncached
+        ./result/bin/nix-build-uncached non-broken.nix
