--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,4 @@ jobs:
       with:
         name: mic92
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - run: |
-        nix-build -A nix-build-uncached
-        ./result/bin/nix-build-uncached non-broken.nix
+    - run: nix run -f . nix-build-uncached -c nix-build-uncached non-broken.nix
