--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: Gerschtli/install-nix-action@ddf1cd2bc500fec5a443c8858214d79545cc5e2d
       with:
-        NIX_PATH: nixpkgs=channel:nixos-unstable
+        NIX_PATH: ${{ matrix.nixPath }}
     - run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
     - uses: cachix/cachix-action@v6
       with:
