--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,11 @@ jobs:
           --option allow-import-from-derivation true \
           --drv-path --show-trace \
           -I nixpkgs=$(nix-instantiate --find-file nixpkgs) \
-          -I $PWD
+          -I $PWD > /dev/null
+    - uses:  rmcgibbo/nixpkgs-hammering-action@master
+      with:
+        nixpkgs_path: ./.
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build nix packages
       run: nix run -f . nix-build-uncached -c nix-build-uncached non-broken.nix
     - name: Trigger NUR update
